# goodanalysis

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Instrcutions.txt  Instructions.txt  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Header.css  Header.js  VideoForm.css  VideoForm.js  VideoList.css  VideoList.js  VideoTranscript.css  VideoTranscript.js
frontend/src/services/: api.js
goodanalysis/: api_server.py  main.py  rag_system.py  transcript_downloader.py  vector_store.py  web_ui.py
goodanalysis/templates/: base.html  error.html  index.html  transcript.html
